Fix word overflow issue

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -115,6 +115,11 @@
   color: #222;
   padding: var(--s2);
   text-decoration: none;
+  word-wrap: break-word;
+  white-space: normal;
+  overflow-wrap: break-word;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 .grid-item:hover {
